@@ -29,10 +29,10 @@ SUBROUTINE wfcinit()
   USE wavefunctions_module, ONLY : evc
   USE wvfct,                ONLY : nbnd, npwx, current_k
   USE wannier_new,          ONLY : use_wannier
-#if defined (__XSD)
-  USE pw_restart_new,       ONLY : pw_readschema_file, read_collected_to_evc 
-#else
+#if defined (__OLDXML)
   USE pw_restart,           ONLY : pw_readfile
+#else
+  USE pw_restart_new,       ONLY : pw_readschema_file, read_collected_to_evc 
 #endif
   USE mp_bands,             ONLY : nbgrp, root_bgrp,inter_bgrp_comm
   USE mp,                   ONLY : mp_bcast
@@ -44,7 +44,7 @@ SUBROUTINE wfcinit()
   INTEGER :: ik, ierr
   LOGICAL :: exst, exst_mem, exst_file, opnd_file, twfcollect_file = .FALSE.
   CHARACTER (256 )                        :: dirname
-#if defined (__XSD) 
+#if !defined (__OLDXML) 
   TYPE ( output_type )                    :: output_obj
 #endif 
   !
@@ -72,8 +72,9 @@ SUBROUTINE wfcinit()
      ! ... rewrite them (in pw_readfile) using the internal format
      !
      ierr = 1
-#if defined(__XSD)
-     !ALLOCATE ( output_obj) 
+#if defined(__OLDXML)
+     CALL pw_readfile( 'wave', ierr )
+#else
      CALL pw_readschema_file(IERR = ierr, RESTART_OUTPUT = output_obj )
      IF ( ierr == 0 ) THEN 
         twfcollect_file = output_obj%band_structure%wf_collected   
@@ -81,9 +82,6 @@ SUBROUTINE wfcinit()
         IF ( twfcollect_file ) CALL read_collected_to_evc(dirname )
      END IF 
      CALL qes_reset_output ( output_obj ) 
-     !DEALLOCATE ( output_obj )    
-#else
-     CALL pw_readfile( 'wave', ierr )
 #endif
      IF ( ierr > 0 ) THEN
         WRITE( stdout, '(5X,"Cannot read wfc : file not found")' )
