@@ -4,7 +4,7 @@ AC_DEFUN([X_AC_QE_XML], [
 
 AC_ARG_ENABLE(xml,
    [AS_HELP_STRING([--enable-xml],
-       [enable XML output  (default: no)])],
+       [enable XML output  (default: yes)])],
    [if   test "$enableval" = "yes" ; then
       use_xml=1
    else
@@ -13,6 +13,6 @@ AC_ARG_ENABLE(xml,
    [use_xml=0])
    
 # preprocessing flag for XML
-if test "$use_xml" -eq 1 ; then try_dflags="$try_dflags -D__XSD" ; fi
+if test "$use_xml" -eq 0 ; then try_dflags="$try_dflags -D__OLDXML" ; fi
 
 ])
